@@ -4,7 +4,7 @@ package com.softwaremagico.kt.core.controller;
  * #%L
  * Kendo Tournament Manager (Core)
  * %%
- * Copyright (C) 2021 - 2024 Softwaremagico
+ * Copyright (C) 2021 - 2025 Softwaremagico
  * %%
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as published by
@@ -34,6 +34,7 @@ import com.softwaremagico.kt.core.exceptions.TournamentNotFoundException;
 import com.softwaremagico.kt.core.providers.AchievementProvider;
 import com.softwaremagico.kt.core.providers.DuelProvider;
 import com.softwaremagico.kt.core.providers.FightProvider;
+import com.softwaremagico.kt.core.providers.GroupProvider;
 import com.softwaremagico.kt.core.providers.ParticipantProvider;
 import com.softwaremagico.kt.core.providers.RankingProvider;
 import com.softwaremagico.kt.core.providers.RoleProvider;
@@ -41,9 +42,13 @@ import com.softwaremagico.kt.core.providers.TeamProvider;
 import com.softwaremagico.kt.core.providers.TournamentProvider;
 import com.softwaremagico.kt.core.score.ScoreOfCompetitor;
 import com.softwaremagico.kt.core.score.ScoreOfTeam;
+import com.softwaremagico.kt.core.tournaments.BubbleSortTournamentHandler;
+import com.softwaremagico.kt.core.tournaments.SenbatsuTournamentHandler;
+import com.softwaremagico.kt.logger.KendoTournamentLogger;
 import com.softwaremagico.kt.persistence.entities.Achievement;
 import com.softwaremagico.kt.persistence.entities.Duel;
 import com.softwaremagico.kt.persistence.entities.Fight;
+import com.softwaremagico.kt.persistence.entities.Group;
 import com.softwaremagico.kt.persistence.entities.Participant;
 import com.softwaremagico.kt.persistence.entities.Role;
 import com.softwaremagico.kt.persistence.entities.Team;
@@ -72,6 +77,8 @@ import java.util.stream.Collectors;
 public class AchievementController extends BasicInsertableController<Achievement, AchievementDTO, AchievementRepository,
         AchievementProvider, AchievementConverterRequest, AchievementConverter> {
 
+    private static final int MILLIS = 1000;
+
     private static final int LETHAL_WEAPON_MAX_TIME = 5;
 
     private static final int DAYS_TO_CHECK_INCREMENTAL_ACHIEVEMENTS = 365;
@@ -92,8 +99,8 @@ public class AchievementController extends BasicInsertableController<Achievement
     private static final int DEFAULT_OCCURRENCES_BY_YEAR_SILVER = 4;
     private static final int DEFAULT_OCCURRENCES_BY_YEAR_GOLD = 5;
 
-    private static final int DEFAULT_SCORE_BRONZE = 20;
-    private static final int DEFAULT_SCORE_SILVER = 50;
+    private static final int DEFAULT_SCORE_BRONZE = 30;
+    private static final int DEFAULT_SCORE_SILVER = 60;
     private static final int DEFAULT_SCORE_GOLD = 100;
 
     private static final int MINIMUM_ROLES_BAMBOO_NORMAL = 2;
@@ -116,6 +123,16 @@ public class AchievementController extends BasicInsertableController<Achievement
     private static final int DARUMA_TOURNAMENTS_BRONZE = 20;
     private static final int DARUMA_TOURNAMENTS_SILVER = 30;
     private static final int DARUMA_TOURNAMENTS_GOLD = 50;
+
+    private static final int DETHRONE_THE_KING_NORMAL = 2;
+    private static final int DETHRONE_THE_KING_BRONZE = 3;
+    private static final int DETHRONE_THE_KING_SILVER = 5;
+    private static final int DETHRONE_THE_KING_GOLD = 7;
+
+    private static final int SENBATSU_RUNGS_NORMAL = 3;
+    private static final int SENBATSU_RUNGS_BRONZE = 4;
+    private static final int SENBATSU_RUNGS_SILVER = 5;
+    private static final int SENBATSU_RUNGS_GOLD = 7;
 
     private static final int MAX_PREVIOUS_TOURNAMENTS = 100;
     private static final int MIN_TOURNAMENT_FIGHTS = 5;
@@ -141,11 +158,17 @@ public class AchievementController extends BasicInsertableController<Achievement
 
     private final RankingProvider rankingProvider;
 
+    private final GroupProvider groupProvider;
+
+    private final BubbleSortTournamentHandler bubbleSortTournamentHandler;
+
+    private final SenbatsuTournamentHandler senbatsuTournamentHandler;
+
     private Tournament tournament;
 
     private List<Role> rolesFromTournament;
 
-    private List<Participant> participantsFromTournament;
+    private Map<Tournament, List<Participant>> participantsFromTournament = new HashMap<>();
 
     private List<Duel> duelsFromTournament;
 
@@ -169,7 +192,9 @@ public class AchievementController extends BasicInsertableController<Achievement
                                     ParticipantProvider participantProvider, ParticipantConverter participantConverter,
                                     RoleProvider roleProvider, TeamProvider teamProvider, AchievementProvider achievementProvider,
                                     FightProvider fightProvider, DuelProvider duelProvider,
-                                    RankingProvider rankingProvider) {
+                                    RankingProvider rankingProvider, GroupProvider groupProvider,
+                                    BubbleSortTournamentHandler bubbleSortTournamentHandler,
+                                    SenbatsuTournamentHandler senbatsuTournamentHandler) {
         super(provider, converter);
         this.tournamentConverter = tournamentConverter;
         this.tournamentProvider = tournamentProvider;
@@ -181,6 +206,9 @@ public class AchievementController extends BasicInsertableController<Achievement
         this.fightProvider = fightProvider;
         this.duelProvider = duelProvider;
         this.rankingProvider = rankingProvider;
+        this.groupProvider = groupProvider;
+        this.bubbleSortTournamentHandler = bubbleSortTournamentHandler;
+        this.senbatsuTournamentHandler = senbatsuTournamentHandler;
     }
 
     public interface AchievementsGeneratedListener {
@@ -211,11 +239,15 @@ public class AchievementController extends BasicInsertableController<Achievement
         return rolesFromTournament;
     }
 
-    private List<Participant> getParticipantsFromTournament() {
+    private List<Participant> getParticipantsFromTournament(Tournament tournament) {
         if (participantsFromTournament == null) {
-            participantsFromTournament = participantProvider.get(tournament);
+            participantsFromTournament = new HashMap<>();
         }
-        return participantsFromTournament;
+        participantsFromTournament.computeIfAbsent(tournament, t -> participantsFromTournament.get(tournament));
+        if (participantsFromTournament.get(tournament) == null) {
+            participantsFromTournament.put(tournament, participantProvider.get(tournament));
+        }
+        return participantsFromTournament.get(tournament);
     }
 
     private List<Duel> getDuelsFromTournament() {
@@ -245,12 +277,12 @@ public class AchievementController extends BasicInsertableController<Achievement
             getDuelsFromTournament().forEach(duel -> {
                 scoresByParticipant.computeIfAbsent(duel.getCompetitor1(), k -> new ArrayList<>());
                 scoresByParticipant.computeIfAbsent(duel.getCompetitor2(), k -> new ArrayList<>());
-                duel.getCompetitor1Score().forEach(score -> {
-                    scoresByParticipant.get(duel.getCompetitor1()).add(score);
-                });
-                duel.getCompetitor2Score().forEach(score -> {
-                    scoresByParticipant.get(duel.getCompetitor2()).add(score);
-                });
+                duel.getCompetitor1Score().forEach(score ->
+                        scoresByParticipant.get(duel.getCompetitor1()).add(score)
+                );
+                duel.getCompetitor2Score().forEach(score ->
+                        scoresByParticipant.get(duel.getCompetitor2()).add(score)
+                );
             });
         }
         return scoresByParticipant;
@@ -262,12 +294,12 @@ public class AchievementController extends BasicInsertableController<Achievement
             getDuelsFromTournament().forEach(duel -> {
                 scoresReceivedByParticipant.computeIfAbsent(duel.getCompetitor1(), k -> new ArrayList<>());
                 scoresReceivedByParticipant.computeIfAbsent(duel.getCompetitor2(), k -> new ArrayList<>());
-                duel.getCompetitor1Score().forEach(score -> {
-                    scoresReceivedByParticipant.get(duel.getCompetitor2()).add(score);
-                });
-                duel.getCompetitor2Score().forEach(score -> {
-                    scoresReceivedByParticipant.get(duel.getCompetitor1()).add(score);
-                });
+                duel.getCompetitor1Score().forEach(score ->
+                        scoresReceivedByParticipant.get(duel.getCompetitor2()).add(score)
+                );
+                duel.getCompetitor2Score().forEach(score ->
+                        scoresReceivedByParticipant.get(duel.getCompetitor1()).add(score)
+                );
             });
         }
         return scoresReceivedByParticipant;
@@ -281,7 +313,7 @@ public class AchievementController extends BasicInsertableController<Achievement
             //Also current tournament!
             previousTournaments.add(0, tournament);
 
-            getParticipantsFromTournament().forEach(participant ->
+            getParticipantsFromTournament(tournament).forEach(participant ->
                     totalScoreFromParticipant.put(participant, duelProvider.countScoreFromCompetitor(participant, previousTournaments)));
         }
         return totalScoreFromParticipant;
@@ -295,7 +327,7 @@ public class AchievementController extends BasicInsertableController<Achievement
             //Also current tournament!
             previousTournaments.add(0, tournament);
 
-            getParticipantsFromTournament().forEach(participant ->
+            getParticipantsFromTournament(tournament).forEach(participant ->
                     totalScoreAgainstParticipant.put(participant, duelProvider.countScoreAgainstCompetitor(participant, previousTournaments)));
         }
         return totalScoreAgainstParticipant;
@@ -303,7 +335,7 @@ public class AchievementController extends BasicInsertableController<Achievement
 
     private Map<Participant, List<Role>> getRolesByParticipant() {
         if (rolesByParticipant == null) {
-            final List<Role> roles = roleProvider.getBy(getParticipantsFromTournament());
+            final List<Role> roles = roleProvider.getBy(getParticipantsFromTournament(tournament));
             rolesByParticipant = roles.stream().collect(Collectors.groupingBy(Role::getParticipant));
         }
         return rolesByParticipant;
@@ -354,29 +386,40 @@ public class AchievementController extends BasicInsertableController<Achievement
     }
 
     public List<AchievementDTO> getTournamentAchievements(Integer tournamentId) {
-        final Tournament tournament = tournamentProvider.get(tournamentId)
+        final Tournament tournamentEntity = tournamentProvider.get(tournamentId)
                 .orElseThrow(() -> new TournamentNotFoundException(getClass(), "No tournament found with id '" + tournamentId + "'."));
-        return convertAll(getProvider().get(tournament));
+        return convertAll(getProvider().get(tournamentEntity));
     }
 
     public List<AchievementDTO> regenerateAllAchievements() {
+        final long start = System.currentTimeMillis();
         final List<TournamentDTO> tournaments = tournamentConverter.convertAll(tournamentProvider.getAll().stream()
-                .map(TournamentConverterRequest::new).collect(Collectors.toList()));
-        tournaments.sort(Comparator.comparing(TournamentDTO::getCreatedAt));
+                .map(TournamentConverterRequest::new).toList());
+        //Inserted tournaments from previpus version have same date in some cases.
+        tournaments.sort(Comparator.comparing(TournamentDTO::getCreatedAt).thenComparing(TournamentDTO::getId));
         final List<AchievementDTO> achievementsGenerated = new ArrayList<>();
         achievementProvider.deleteAll();
-        for (final TournamentDTO tournament : tournaments) {
-            achievementsGenerated.addAll(generateAchievements(tournament));
+        for (final TournamentDTO tournamentDTO : tournaments) {
+            achievementsGenerated.addAll(generateAchievements(tournamentDTO));
         }
         for (AchievementsGeneratedAllTournamentsListener achievementsGeneratedAllTournamentsListener : achievementsGeneratedAllTournamentsListeners) {
             achievementsGeneratedAllTournamentsListener.generated(achievementsGenerated, tournaments);
         }
-        return achievementsGenerated;
+        try {
+            return achievementsGenerated;
+        } finally {
+            final long finish = System.currentTimeMillis();
+            KendoTournamentLogger.info(this.getClass(), "Time needed for recalculating the achievements: '{}' secs.", (finish - start) / MILLIS);
+        }
     }
 
     public List<AchievementDTO> regenerateAchievements(Integer tournamentId) {
-        final TournamentDTO tournament = tournamentConverter.convert(new TournamentConverterRequest(tournamentProvider.get(tournamentId)
+        final TournamentDTO tournamentDTO = tournamentConverter.convert(new TournamentConverterRequest(tournamentProvider.get(tournamentId)
                 .orElseThrow(() -> new TournamentNotFoundException(getClass(), "No tournament found with id '" + tournamentId + "'."))));
+        return regenerateAchievements(tournamentDTO);
+    }
+
+    public List<AchievementDTO> regenerateAchievements(TournamentDTO tournament) {
         deleteAchievements(tournament);
         final List<AchievementDTO> achievementsGenerated = generateAchievements(tournament);
         achievementsGeneratedListeners.forEach(achievementsGeneratedListener
@@ -386,6 +429,14 @@ public class AchievementController extends BasicInsertableController<Achievement
 
     private void deleteAchievements(TournamentDTO tournamentDTO) {
         getProvider().delete(tournamentConverter.reverse(tournamentDTO));
+    }
+
+    public Map<AchievementType, Map<AchievementGrade, Integer>> getAchievementsCount() {
+        return getProvider().getAchievementsCount();
+    }
+
+    public int countAchievements(AchievementType achievementType) {
+        return getProvider().countAchievements(achievementType);
     }
 
     public List<AchievementDTO> generateAchievements(TournamentDTO tournamentDTO) {
@@ -442,6 +493,8 @@ public class AchievementController extends BasicInsertableController<Achievement
         achievementsGenerated.addAll(generateStormtrooperSyndromeAchievement(tournament));
         achievementsGenerated.addAll(generateVendettaAchievement(tournament));
         achievementsGenerated.addAll(generateSithApprenticesAlwaysKillTheirMasterAchievement(tournament));
+        achievementsGenerated.addAll(generateDethroneTheKingAchievement(tournament));
+        achievementsGenerated.addAll(generateClimbTheLadderAchievement(tournament));
 
         // Now generate extra grades.
         achievementsGenerated.addAll(generateBillyTheKidAchievementBronze(tournament));
@@ -536,8 +589,8 @@ public class AchievementController extends BasicInsertableController<Achievement
     }
 
     /**
-     * Generate achievements based on normal achievements grades already on database. A new grade is generated if some consecutive
-     * tournaments achievements exists. Note that a grade cannot be a multiplier of the previous
+     * Generate achievements based on normal achievements grades already on the database. A new grade is generated if some consecutive
+     * tournaments achievements exist. Note that a grade cannot be a multiplier of the previous
      * grade level to work properly
      *
      * @param tournament             the tournament to check
@@ -560,7 +613,7 @@ public class AchievementController extends BasicInsertableController<Achievement
         }
 
         final Map<Participant, List<Achievement>> achievementsByParticipant = achievementProvider.get(achievementType,
-                        Collections.singletonList(AchievementGrade.NORMAL), getParticipantsFromTournament(), previousTournaments).stream()
+                        Collections.singletonList(AchievementGrade.NORMAL), getParticipantsFromTournament(tournament), previousTournaments).stream()
                 .collect(Collectors.groupingBy(Achievement::getParticipant));
 
         //Remove the ones that does not have all required achievements
@@ -759,12 +812,16 @@ public class AchievementController extends BasicInsertableController<Achievement
         if (getFightsFromTournament().size() < MIN_TOURNAMENT_FIGHTS) {
             return new ArrayList<>();
         }
-        final List<Participant> competitors = participantProvider.get(tournament, RoleType.COMPETITOR);
-        getDuelsFromTournament().forEach(duel -> {
-            if (duel.getCompetitor1Score().size() < Duel.POINTS_TO_WIN) {
+
+        final List<Duel> duels = getDuelsFromTournament();
+        final Set<Participant> competitors = new HashSet<>();
+        duels.forEach(duel -> competitors.addAll(duel.getCompetitors()));
+
+        duels.forEach(duel -> {
+            if (duel.getCompetitor1ScoreValue() < Duel.POINTS_TO_WIN) {
                 competitors.remove(duel.getCompetitor1());
             }
-            if (duel.getCompetitor2Score().size() < Duel.POINTS_TO_WIN) {
+            if (duel.getCompetitor2ScoreValue() < Duel.POINTS_TO_WIN) {
                 competitors.remove(duel.getCompetitor2());
             }
         });
@@ -808,25 +865,30 @@ public class AchievementController extends BasicInsertableController<Achievement
      * @return a list of new achievements.
      */
     private List<Achievement> generateJuggernautAchievement(Tournament tournament) {
-        final List<Participant> competitors = participantProvider.get(tournament, RoleType.COMPETITOR);
         if (getFightsFromTournament().size() < MIN_TOURNAMENT_FIGHTS) {
             return new ArrayList<>();
         }
-        getDuelsFromTournament().forEach(duel -> {
+
+        final List<Duel> duels = getDuelsFromTournament();
+
+        final Set<Participant> competitors = new HashSet<>();
+        duels.forEach(duel -> competitors.addAll(duel.getCompetitors()));
+
+        duels.forEach(duel -> {
             //Max score competitor 1.
-            if (duel.getCompetitor1Score().size() < Duel.POINTS_TO_WIN) {
+            if (duel.getCompetitor1ScoreValue() < Duel.POINTS_TO_WIN) {
                 competitors.remove(duel.getCompetitor1());
             }
             //No hits against him
-            if (!duel.getCompetitor2Score().isEmpty()) {
+            if (duel.getCompetitor2ScoreValue() > 0) {
                 competitors.remove(duel.getCompetitor1());
             }
             //Max score competitor 2.
-            if (duel.getCompetitor2Score().size() < Duel.POINTS_TO_WIN) {
+            if (duel.getCompetitor2ScoreValue() < Duel.POINTS_TO_WIN) {
                 competitors.remove(duel.getCompetitor2());
             }
             //No hits against him
-            if (!duel.getCompetitor1Score().isEmpty()) {
+            if (duel.getCompetitor1ScoreValue() > 0) {
                 competitors.remove(duel.getCompetitor2());
             }
         });
@@ -971,7 +1033,7 @@ public class AchievementController extends BasicInsertableController<Achievement
      */
     private List<Achievement> generateTheNeverEndingStoryAchievement(Tournament tournament) {
         //Get older of 10 years
-        final List<Participant> participants = getParticipantsFromTournament().stream().filter(participant ->
+        final List<Participant> participants = getParticipantsFromTournament(tournament).stream().filter(participant ->
                         tournament.getCreatedAt() != null && participant.getCreatedAt().isBefore(tournament.getCreatedAt().minusYears(PARTICIPANT_YEARS)))
                 .collect(Collectors.toList());
         //Remove the ones already have this achievement.
@@ -992,7 +1054,7 @@ public class AchievementController extends BasicInsertableController<Achievement
         if (tournament.getCreatedAt() == null) {
             return new ArrayList<>();
         }
-        final List<Participant> participants = getParticipantsFromTournament().stream().filter(participant ->
+        final List<Participant> participants = getParticipantsFromTournament(tournament).stream().filter(participant ->
                 participant.getCreatedAt().isBefore(tournament.getCreatedAt().minusYears(PARTICIPANT_YEARS_BRONZE))).collect(Collectors.toList());
         //Remove the ones already have this achievement.
         final List<Participant> participantsWithThisAchievement = achievementProvider.get(AchievementType.THE_NEVER_ENDING_STORY, AchievementGrade.BRONZE)
@@ -1012,7 +1074,7 @@ public class AchievementController extends BasicInsertableController<Achievement
         if (tournament.getCreatedAt() == null) {
             return new ArrayList<>();
         }
-        final List<Participant> participants = getParticipantsFromTournament().stream().filter(participant ->
+        final List<Participant> participants = getParticipantsFromTournament(tournament).stream().filter(participant ->
                 participant.getCreatedAt().isBefore(tournament.getCreatedAt().minusYears(PARTICIPANT_YEARS_SILVER))).collect(Collectors.toList());
         //Remove the ones already have this achievement.
         final List<Participant> participantsWithThisAchievement = achievementProvider.get(AchievementType.THE_NEVER_ENDING_STORY, AchievementGrade.SILVER)
@@ -1032,7 +1094,7 @@ public class AchievementController extends BasicInsertableController<Achievement
         if (tournament.getCreatedAt() == null) {
             return new ArrayList<>();
         }
-        final List<Participant> participants = getParticipantsFromTournament().stream().filter(participant ->
+        final List<Participant> participants = getParticipantsFromTournament(tournament).stream().filter(participant ->
                 participant.getCreatedAt().isBefore(tournament.getCreatedAt().minusYears(PARTICIPANT_YEARS_GOLD))).collect(Collectors.toList());
         //Remove the ones already have this achievement.
         final List<Participant> participantsWithThisAchievement = achievementProvider.get(AchievementType.THE_NEVER_ENDING_STORY, AchievementGrade.GOLD
@@ -1182,8 +1244,12 @@ public class AchievementController extends BasicInsertableController<Achievement
         if (getFightsFromTournament().size() < MIN_TOURNAMENT_FIGHTS) {
             return new ArrayList<>();
         }
-        final List<Participant> competitors = participantProvider.get(tournament, RoleType.COMPETITOR);
-        getDuelsFromTournament().forEach(duel -> {
+
+        final List<Duel> duels = getDuelsFromTournament();
+        final Set<Participant> competitors = new HashSet<>();
+        duels.forEach(duel -> competitors.addAll(duel.getCompetitors()));
+
+        duels.forEach(duel -> {
             if (!duel.getCompetitor2Score().isEmpty()) {
                 competitors.remove(duel.getCompetitor1());
             }
@@ -1236,8 +1302,11 @@ public class AchievementController extends BasicInsertableController<Achievement
         if (getFightsFromTournament().size() < MIN_TOURNAMENT_FIGHTS) {
             return new ArrayList<>();
         }
-        final List<Participant> competitors = participantProvider.get(tournament, RoleType.COMPETITOR);
-        getDuelsFromTournament().forEach(duel -> {
+        final List<Duel> duels = getDuelsFromTournament();
+        final Set<Participant> competitors = new HashSet<>();
+        duels.forEach(duel -> competitors.addAll(duel.getCompetitors()));
+
+        duels.forEach(duel -> {
             if (!duel.getCompetitor1Score().isEmpty() || !duel.getCompetitor2Score().isEmpty()) {
                 competitors.remove(duel.getCompetitor1());
                 competitors.remove(duel.getCompetitor2());
@@ -1360,7 +1429,7 @@ public class AchievementController extends BasicInsertableController<Achievement
     }
 
     /**
-     * When somebody loose a combat only by Hansokus.
+     * When somebody loses a combat only by Hansokus.
      *
      * @param tournament The tournament to check.
      * @return a list of new achievements.
@@ -1393,13 +1462,15 @@ public class AchievementController extends BasicInsertableController<Achievement
             return new ArrayList<>();
         }
         final List<Duel> duels = new ArrayList<>(getDuelsFromTournament());
-        final List<Participant> woodcutters = new ArrayList<>(getParticipantsFromTournament());
+        final Set<Participant> woodcutters = new HashSet<>();
+        duels.forEach(duel -> woodcutters.addAll(duel.getCompetitors()));
         //Only applied to competitors.
         getRolesFromTournament().forEach(role -> {
             if (role.getRoleType() != RoleType.COMPETITOR) {
                 woodcutters.remove(role.getParticipant());
             }
         });
+        //Retain all competitors that are in a fight.
         //Must have at least one hit, and cannot have something different that a 'Do'.
         duels.forEach(duel -> {
             if (duel.getCompetitor1Score().isEmpty()) {
@@ -1462,7 +1533,9 @@ public class AchievementController extends BasicInsertableController<Achievement
      */
     private List<Achievement> generateFlexibleAsBambooAchievement(Tournament tournament) {
         //Get all participants from a tournament that has almost all roles in any tournament,
-        final List<Participant> participants = participantProvider.get(tournament, MINIMUM_ROLES_BAMBOO_NORMAL);
+        final List<Tournament> previousTournaments = tournamentProvider.getPreviousTo(tournament);
+        previousTournaments.add(tournament);
+        final List<Participant> participants = participantProvider.get(previousTournaments, MINIMUM_ROLES_BAMBOO_NORMAL);
         //Remove the ones already have the achievement.
         participants.removeAll(participantProvider.getParticipantsWithAchievementFromList(AchievementType.FLEXIBLE_AS_BAMBOO, participants));
         //Create new achievement for the participants.
@@ -1477,7 +1550,9 @@ public class AchievementController extends BasicInsertableController<Achievement
      */
     private List<Achievement> generateFlexibleAsBambooAchievementBronze(Tournament tournament) {
         //Get all participants from a tournament that has almost all roles in any tournament,
-        final List<Participant> participants = participantProvider.get(tournament, MINIMUM_ROLES_BAMBOO_BRONZE);
+        final List<Tournament> previousTournaments = tournamentProvider.getPreviousTo(tournament);
+        previousTournaments.add(tournament);
+        final List<Participant> participants = participantProvider.get(previousTournaments, MINIMUM_ROLES_BAMBOO_BRONZE);
         //Remove the ones already have the achievement.
         participants.removeAll(participantProvider.getParticipantsWithAchievementFromList(AchievementType.FLEXIBLE_AS_BAMBOO,
                 AchievementGrade.BRONZE, participants));
@@ -1493,7 +1568,9 @@ public class AchievementController extends BasicInsertableController<Achievement
      */
     private List<Achievement> generateFlexibleAsBambooAchievementSilver(Tournament tournament) {
         //Get all participants from a tournament that has almost all roles in any tournament,
-        final List<Participant> participants = participantProvider.get(tournament, MINIMUM_ROLES_BAMBOO_SILVER);
+        final List<Tournament> previousTournaments = tournamentProvider.getPreviousTo(tournament);
+        previousTournaments.add(tournament);
+        final List<Participant> participants = participantProvider.get(previousTournaments, MINIMUM_ROLES_BAMBOO_SILVER);
         //Remove the ones already have the achievement.
         participants.removeAll(participantProvider.getParticipantsWithAchievementFromList(AchievementType.FLEXIBLE_AS_BAMBOO,
                 AchievementGrade.SILVER, participants));
@@ -1509,7 +1586,9 @@ public class AchievementController extends BasicInsertableController<Achievement
      */
     private List<Achievement> generateFlexibleAsBambooAchievementGold(Tournament tournament) {
         //Get all participants from a tournament that has almost all roles in any tournament,
-        final List<Participant> participants = participantProvider.get(tournament, MINIMUM_ROLES_BAMBOO_GOLD);
+        final List<Tournament> previousTournaments = tournamentProvider.getPreviousTo(tournament);
+        previousTournaments.add(tournament);
+        final List<Participant> participants = participantProvider.get(previousTournaments, MINIMUM_ROLES_BAMBOO_GOLD);
         //Remove the ones already have the achievement.
         participants.removeAll(participantProvider.getParticipantsWithAchievementFromList(AchievementType.FLEXIBLE_AS_BAMBOO,
                 AchievementGrade.GOLD, participants));
@@ -1538,10 +1617,10 @@ public class AchievementController extends BasicInsertableController<Achievement
      * @return a list of new achievements.
      */
     private List<Achievement> generateSweatyTenuguiAchievementBronze(Tournament tournament) {
-        final Map<Participant, List<Role>> rolesByParticipant = new HashMap<>(getRolesByParticipantUntil(tournament));
-        //Remove the ones that has no the required number of tournaments.
+        final Map<Participant, List<Role>> rolesByParticipantFromTournament = new HashMap<>(getRolesByParticipantUntil(tournament));
+        //Remove the ones that have no the required number of tournaments.
         final Set<Participant> participants = new HashSet<>(getRolesByParticipantUntil(tournament).keySet());
-        rolesByParticipant.forEach((participant, roles) -> {
+        rolesByParticipantFromTournament.forEach((participant, roles) -> {
             if (roles.stream().filter(role -> role.getRoleType() == RoleType.COMPETITOR)
                     .toList().size() < DEFAULT_TOURNAMENT_VERY_LONG_NUMBER_BRONZE) {
                 participants.remove(participant);
@@ -1560,10 +1639,10 @@ public class AchievementController extends BasicInsertableController<Achievement
      * @return a list of new achievements.
      */
     private List<Achievement> generateSweatyTenuguiAchievementSilver(Tournament tournament) {
-        final Map<Participant, List<Role>> rolesByParticipant = new HashMap<>(getRolesByParticipantUntil(tournament));
-        //Remove the ones that has no the required number of tournaments.
+        final Map<Participant, List<Role>> rolesByParticipantFromTournament = new HashMap<>(getRolesByParticipantUntil(tournament));
+        //Remove the ones that have no the required number of tournaments.
         final Set<Participant> participants = new HashSet<>(getRolesByParticipantUntil(tournament).keySet());
-        rolesByParticipant.forEach((participant, roles) -> {
+        rolesByParticipantFromTournament.forEach((participant, roles) -> {
             if (roles.stream().filter(role -> role.getRoleType() == RoleType.COMPETITOR)
                     .toList().size() < DEFAULT_TOURNAMENT_VERY_LONG_NUMBER_SILVER) {
                 participants.remove(participant);
@@ -1582,10 +1661,10 @@ public class AchievementController extends BasicInsertableController<Achievement
      * @return a list of new achievements.
      */
     private List<Achievement> generateSweatyTenuguiAchievementGold(Tournament tournament) {
-        final Map<Participant, List<Role>> rolesByParticipant = new HashMap<>(getRolesByParticipant());
+        final Map<Participant, List<Role>> rolesByParticipantFromTournament = new HashMap<>(getRolesByParticipant());
         //Remove the ones that has no the required number of tournaments.
         final Set<Participant> participants = new HashSet<>(getRolesByParticipant().keySet());
-        rolesByParticipant.forEach((participant, roles) -> {
+        rolesByParticipantFromTournament.forEach((participant, roles) -> {
             if (roles.stream().filter(role -> role.getRoleType() == RoleType.COMPETITOR)
                     .toList().size() < DEFAULT_TOURNAMENT_VERY_LONG_NUMBER_GOLD) {
                 participants.remove(participant);
@@ -1883,15 +1962,24 @@ public class AchievementController extends BasicInsertableController<Achievement
      */
     private List<Achievement> generateDarumaAchievementBronze(Tournament tournament) {
         final List<Participant> participantsDaruma = new ArrayList<>();
+
+        final List<Tournament> previousTournaments = tournamentProvider.getPreviousTo(tournament);
+        previousTournaments.add(tournament);
+
         //Already achievements granted
         final List<Participant> alreadyDarumaAchievement = getProvider().get(AchievementType.DARUMA, AchievementGrade.BRONZE).stream().map(
                 Achievement::getParticipant).toList();
-        getTotalScoreFromParticipant().forEach((participant, score) -> {
-            if (getRolesByParticipant().get(participant) != null && getRolesByParticipant().get(participant).size() >= DARUMA_TOURNAMENTS_BRONZE
-                    && !alreadyDarumaAchievement.contains(participant)) {
-                participantsDaruma.add(participant);
+
+        getParticipantsFromTournament(tournament).forEach(participant -> {
+            if (getRolesByParticipant().get(participant) != null) {
+                final List<Role> previousRoles = new ArrayList<>(getRolesByParticipant().get(participant)).stream().filter(role ->
+                        previousTournaments.contains(role.getTournament())).toList();
+                if (previousRoles.size() >= DARUMA_TOURNAMENTS_BRONZE && !alreadyDarumaAchievement.contains(participant)) {
+                    participantsDaruma.add(participant);
+                }
             }
         });
+
         return generateAchievement(AchievementType.DARUMA, AchievementGrade.BRONZE, participantsDaruma, tournament);
     }
 
@@ -1902,17 +1990,28 @@ public class AchievementController extends BasicInsertableController<Achievement
      */
     private List<Achievement> generateDarumaAchievementSilver(Tournament tournament) {
         final List<Participant> participantsDaruma = new ArrayList<>();
+
+        final List<Tournament> previousTournaments = tournamentProvider.getPreviousTo(tournament);
+        previousTournaments.add(tournament);
+
         //Already achievements granted
         final List<Participant> alreadyDarumaAchievement = getProvider().get(AchievementType.DARUMA, AchievementGrade.SILVER).stream().map(
                 Achievement::getParticipant).toList();
-        getTotalScoreFromParticipant().forEach((participant, score) -> {
-            if (getRolesByParticipant().get(participant) != null && getRolesByParticipant().get(participant).size() >= DARUMA_TOURNAMENTS_SILVER
-                    && !alreadyDarumaAchievement.contains(participant)) {
-                participantsDaruma.add(participant);
+
+
+        getParticipantsFromTournament(tournament).forEach(participant -> {
+            if (getRolesByParticipant().get(participant) != null) {
+                final List<Role> previousRoles = new ArrayList<>(getRolesByParticipant().get(participant)).stream().filter(role ->
+                        previousTournaments.contains(role.getTournament())).toList();
+                if (previousRoles.size() >= DARUMA_TOURNAMENTS_SILVER && !alreadyDarumaAchievement.contains(participant)) {
+                    participantsDaruma.add(participant);
+                }
             }
         });
+
         return generateAchievement(AchievementType.DARUMA, AchievementGrade.SILVER, participantsDaruma, tournament);
     }
+
 
     /***
      * Assist at least to 50 tournaments.
@@ -1921,17 +2020,28 @@ public class AchievementController extends BasicInsertableController<Achievement
      */
     private List<Achievement> generateDarumaAchievementGold(Tournament tournament) {
         final List<Participant> participantsDaruma = new ArrayList<>();
+
+        final List<Tournament> previousTournaments = tournamentProvider.getPreviousTo(tournament);
+        previousTournaments.add(tournament);
+
         //Already achievements granted
         final List<Participant> alreadyDarumaAchievement = getProvider().get(AchievementType.DARUMA, AchievementGrade.GOLD).stream().map(
                 Achievement::getParticipant).toList();
-        getTotalScoreFromParticipant().forEach((participant, score) -> {
-            if (getRolesByParticipant().get(participant) != null && getRolesByParticipant().get(participant).size() >= DARUMA_TOURNAMENTS_GOLD
-                    && !alreadyDarumaAchievement.contains(participant)) {
-                participantsDaruma.add(participant);
+
+
+        getParticipantsFromTournament(tournament).forEach(participant -> {
+            if (getRolesByParticipant().get(participant) != null) {
+                final List<Role> previousRoles = new ArrayList<>(getRolesByParticipant().get(participant)).stream().filter(role ->
+                        previousTournaments.contains(role.getTournament())).toList();
+                if (previousRoles.size() >= DARUMA_TOURNAMENTS_GOLD && !alreadyDarumaAchievement.contains(participant)) {
+                    participantsDaruma.add(participant);
+                }
             }
         });
+
         return generateAchievement(AchievementType.DARUMA, AchievementGrade.GOLD, participantsDaruma, tournament);
     }
+
 
     /***
      * Be in a team, and all members of the teams does no score in the entire tournament.
@@ -2013,18 +2123,18 @@ public class AchievementController extends BasicInsertableController<Achievement
                         }
                     }
                 }
-                if (isApprentice) {
+                if (isApprentice && duel.getCompetitorWinner() != null) {
                     //Generate achievement depending on the number of fights.
-                    if (numberOfPreviousDuels == MINIMUM_LOST_SITH_NORMAL) {
+                    if (numberOfPreviousDuels >= MINIMUM_LOST_SITH_NORMAL && numberOfPreviousDuels < MINIMUM_LOST_SITH_BRONZE) {
                         achievements.add(new Achievement(duel.getCompetitorWinner(), tournament, AchievementType.SITH_APPRENTICES_ALWAYS_KILL_THEIR_MASTER,
                                 AchievementGrade.NORMAL));
-                    } else if (numberOfPreviousDuels == MINIMUM_LOST_SITH_BRONZE) {
+                    } else if (numberOfPreviousDuels >= MINIMUM_LOST_SITH_BRONZE && numberOfPreviousDuels < MINIMUM_LOST_SITH_SILVER) {
                         achievements.add(new Achievement(duel.getCompetitorWinner(), tournament, AchievementType.SITH_APPRENTICES_ALWAYS_KILL_THEIR_MASTER,
                                 AchievementGrade.BRONZE));
-                    } else if (numberOfPreviousDuels == MINIMUM_LOST_SITH_SILVER) {
+                    } else if (numberOfPreviousDuels >= MINIMUM_LOST_SITH_SILVER && numberOfPreviousDuels < MINIMUM_LOST_SITH_GOLD) {
                         achievements.add(new Achievement(duel.getCompetitorWinner(), tournament, AchievementType.SITH_APPRENTICES_ALWAYS_KILL_THEIR_MASTER,
                                 AchievementGrade.SILVER));
-                    } else if (numberOfPreviousDuels == MINIMUM_LOST_SITH_GOLD) {
+                    } else if (numberOfPreviousDuels >= MINIMUM_LOST_SITH_GOLD) {
                         achievements.add(new Achievement(duel.getCompetitorWinner(), tournament, AchievementType.SITH_APPRENTICES_ALWAYS_KILL_THEIR_MASTER,
                                 AchievementGrade.GOLD));
                     }
@@ -2032,6 +2142,80 @@ public class AchievementController extends BasicInsertableController<Achievement
             }
         });
         return achievementProvider.saveAll(achievements);
+    }
+
+    /**
+     * Somebody wins a fight despite the opponent has scored first.
+     *
+     * @param tournament
+     */
+    private List<Achievement> generateDethroneTheKingAchievement(Tournament tournament) {
+        if (tournament.getType() == TournamentType.BUBBLE_SORT) {
+            final List<Group> groups = groupProvider.getGroups(tournament);
+            if (groups.size() > 1) {
+                final List<Team> startingRanking = groups.get(0).getTeams();
+                final List<Team> endingRanking = bubbleSortTournamentHandler.getTeamsOrderedByRanks(tournament, groups.get(groups.size() - 1),
+                        bubbleSortTournamentHandler.getDrawResolution(tournament));
+
+                //The King is the last one.
+                final Team kingTeam = endingRanking.get(endingRanking.size() - 1);
+
+                //How much have fought to be the king:
+                final int startingPosition = startingRanking.indexOf(kingTeam);
+                final int kingPosition = endingRanking.size() - 1;
+
+                if (kingPosition - startingPosition >= DETHRONE_THE_KING_GOLD) {
+                    return generateAchievement(AchievementType.DETHRONE_THE_KING, AchievementGrade.GOLD,
+                            kingTeam.getMembers(), tournament);
+                } else if (kingPosition - startingPosition >= DETHRONE_THE_KING_SILVER) {
+                    return generateAchievement(AchievementType.DETHRONE_THE_KING, AchievementGrade.SILVER,
+                            kingTeam.getMembers(), tournament);
+                } else if (kingPosition - startingPosition >= DETHRONE_THE_KING_BRONZE) {
+                    return generateAchievement(AchievementType.DETHRONE_THE_KING, AchievementGrade.BRONZE,
+                            kingTeam.getMembers(), tournament);
+                } else if (kingPosition - startingPosition >= DETHRONE_THE_KING_NORMAL) {
+                    return generateAchievement(AchievementType.DETHRONE_THE_KING, AchievementGrade.NORMAL,
+                            kingTeam.getMembers(), tournament);
+                }
+            }
+        }
+        return new ArrayList<>();
+    }
+
+    /**
+     * Somebody wins a fight despite the opponent has scored first.
+     *
+     * @param tournament
+     */
+    private List<Achievement> generateClimbTheLadderAchievement(Tournament tournament) {
+        final List<Achievement> achievements = new ArrayList<>();
+        if (tournament.getType() == TournamentType.SENBATSU) {
+
+            final List<Group> groups = groupProvider.getGroups(tournament);
+            final List<Team> startingRanking = groups.get(0).getTeams();
+            final List<Team> endingRanking = senbatsuTournamentHandler.getFinalRanking(tournament);
+
+            //Hay many rungs have you climbed?
+            startingRanking.forEach(team -> {
+                final int startingPosition = startingRanking.indexOf(team);
+                final int endingPosition = endingRanking.indexOf(team);
+                if (endingPosition - startingPosition >= SENBATSU_RUNGS_GOLD) {
+                    achievements.addAll(generateAchievement(AchievementType.CLIMB_THE_LADDER, AchievementGrade.GOLD,
+                            team.getMembers(), tournament));
+                } else if (endingPosition - startingPosition >= SENBATSU_RUNGS_SILVER) {
+                    achievements.addAll(generateAchievement(AchievementType.CLIMB_THE_LADDER, AchievementGrade.SILVER,
+                            team.getMembers(), tournament));
+                } else if (endingPosition - startingPosition >= SENBATSU_RUNGS_BRONZE) {
+                    achievements.addAll(generateAchievement(AchievementType.CLIMB_THE_LADDER, AchievementGrade.BRONZE,
+                            team.getMembers(), tournament));
+                } else if (endingPosition - startingPosition >= SENBATSU_RUNGS_NORMAL) {
+                    achievements.addAll(generateAchievement(AchievementType.CLIMB_THE_LADDER, AchievementGrade.NORMAL,
+                            team.getMembers(), tournament));
+
+                }
+            });
+        }
+        return achievements;
     }
 
 
